fix: modal height issue on safari

--- a/src/muiDialog/muiDialog.scss
+++ b/src/muiDialog/muiDialog.scss
@@ -11,6 +11,10 @@
     height: -webkit-fill-available;
   }
 
+  .safari-height-fix {
+    height: fit-content;
+  }
+
   .d-f {
     display: flex;
   }
